--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="signupshown" id="signupshown">
+        <p class="nottext">
+            
+        </p>
+
+    </div>
 </body>
 </html>
