--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@
 
 <body>
     <img class="mainimg" src="/static/photo/instagram.png" alt="none">
-    <p class="protext">Pro</p>
     <div id="tobehidden">
         <p class="textpara">Sign up to see photos and videos from your friends.</p>
         <a class="getapplink" href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en_IN&gl=US"><button class="getappbutton"><b>Get Instagram App</b></button></a>
@@ -27,17 +26,8 @@
             </td>
         </table>
         <p id="accountset" class="accountset"><b><a href="/login" class="loginbutton">Log
-                    in</a></b> Or <b><a href="javascript:void(0)" onclick="signup()" class="signupbutton">Sign
+                    in</a></b> Or <b><a href="/signup" class="signupbutton">Sign
                     up</a></b></p>
-    </div>
-    
-    
-    <div class="forgetd" id="forgetd">
-        <p class="forgetp">
-            This site can not change your password!<br>
-            Contact official site for changing password.<br><a class="instalink"
-                href="https://www.instagram.com/">Instagram</a>
-        </p>
     </div>
 </body>
 <script>
